--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ jobber.log
 postgres-data
 prometheus-data
 grafana-data
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
